--- a/src/App.css
+++ b/src/App.css
@@ -1064,7 +1064,7 @@ span.company, span.modalname {
 
 .hpsth_content {
     display: flex;
-    padding: 32px 0;
+    padding: 32px 0 8px 0;
     justify-content: space-between;
 }
 
@@ -1155,4 +1155,8 @@ span.company, span.modalname {
 
 .homepagesectionfour .customCarousel {
     margin-top: 58px;
+}
+
+.hpsth_cimg img {
+    height: 109px;
 }
