--- a/src/App.css
+++ b/src/App.css
@@ -732,7 +732,7 @@ button.btn-default {
     align-items: center;
     justify-content: space-between;
     margin-top: 42px;
-    border: 1px solid var(--primary_color);
+    border: 1px solid #000;
     padding: 7px 16px;
     border-radius: 12px;
     cursor: pointer;
@@ -741,10 +741,15 @@ button.btn-default {
 
 .btn-default.easy_book_home_bt {
     width: 100%;
+    background-color: #000;
 }
 
 .carAndModal_phone {
     margin-top: 28px;
+}
+
+.carAndModal_phone input {
+    border-color: #000;
 }
 
 .doc_button.easy_book_btn_c {
