--- a/src/App.css
+++ b/src/App.css
@@ -319,7 +319,7 @@ button.btn-default {
     line-height: 16px;
     letter-spacing: .4px;
     padding: 10px 16px;
-    border-radius: 8px;
+    border-radius: 4px;
     color: #fff;
     font-family: "Poppins",sans-serif;
     cursor: pointer;
@@ -1098,7 +1098,7 @@ span.company, span.modalname {
 
 .homepagesectionfour {
     background-color: #FCFBFF;
-    padding: 40px 90px;
+    padding: 40px 90px 90px;
 }
 
 .cR_eachContent {
@@ -1164,4 +1164,109 @@ span.company, span.modalname {
 
 .hpsth_cimg img {
     height: 109px;
+}
+
+.homepagefooter {
+    background-color: #2E2A40;
+    padding: 54px 90px;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+}
+
+.hpf_top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hpf_footer {
+    align-self: center;
+}
+
+.hpf_logo_name {
+    display: flex;
+}
+
+.hpf_ln_logoimg {
+    height: 86px;
+    width: 86px;
+    border-radius: 100%;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hpf_ln_nameinfo {
+    margin-left: 16px;
+}
+
+.hpf_ln_name {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+}
+
+.hpf_ln_subname {
+    font-size: 18px;
+    line-height: 22px;
+    font-weight: 700;
+    margin-top: 4px;
+}
+
+.hpf_social_icons {
+    margin-top: 26px;
+    display: flex;
+    align-items: center;
+}
+
+.hpf_si_icon {
+    margin-right: 28px;
+}
+
+.hpfs_title {
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 600;
+    margin-bottom: 14px;
+}
+
+.hpfs_para {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    margin-bottom: 8px;
+}
+
+.hpf_subscribe {
+    position: relative;
+}
+
+.hpf_subscribe input {
+    width: 284px;
+    padding-right: 110px;
+    border-radius: 6px;
+}
+
+.hpf_subs_button {
+    position: absolute;
+    top: -18px;
+    right: 2px;
+}
+
+.hpf_footer_text {
+    font-size: 18px;
+}
+
+.hpf_footer .copyright {
+    color: var(--primary_color);
+}
+
+.vertical_seperation {
+    margin: 0 4px;
+    border: 0.5px solid #fff;
+}
+
+.copyright {
+    margin-right: 4px;
 }
