--- a/src/App.css
+++ b/src/App.css
@@ -698,7 +698,7 @@ button.btn-default {
 }
 
 .leinaDocar_main {
-    padding: 0 0px 30px;
+    margin-top: 108px;
 }
 
 .homepageSectionOne {
@@ -1269,4 +1269,70 @@ span.company, span.modalname {
 
 .copyright {
     margin-right: 4px;
+}
+
+.doc_nav {
+    padding: 30px 90px;
+    background-color: #ECE4E3;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    top: 0;
+    z-index: 99;
+    width: 100%;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+.docNav_logo_name {
+    display: flex;
+    align-items: center;
+}
+
+.docNav_name {
+    font-size: 32px;
+    font-weight: 700;
+    margin-left: 20px;
+}
+
+.docNav_options {
+    margin-left: 100px;
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+    color: #000;
+    display: flex;
+}
+
+.docNav_options .docNav_option {
+    margin-right: 42px;
+}
+
+.docNav_options a:hover {
+    color: #000;
+}
+
+.docNav_options a.active {
+    color: var(--primary_color);
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.docNav_left {
+    display: flex;
+    align-items: center;
+}
+
+.docNav_login {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 600;
+}
+
+.docNav_login a:hover {
+    color: #000;
 }
