--- a/src/App.css
+++ b/src/App.css
@@ -442,7 +442,7 @@ button.btn-default {
     display: flex;
     overflow-x: auto;
     white-space: nowrap;
-    margin: 0 12px;
+    margin: 0 41px;
     -webkit-overflow-scrolling: touch;
 }
 
@@ -462,6 +462,10 @@ button.btn-default {
     color: #000;
     /* margin-bottom: 12px; */
     cursor: pointer;
+}
+
+.servicesHeaderServices_each:nth-child(1){
+    margin-left: 0;
 }
 
 .servicesHeaderServices_each.selected {
@@ -618,6 +622,8 @@ button.btn-default {
 
 .servicesContainer_body {
     display: flex;
+    margin-top: 40px;
+    padding: 0 90px 30px;
 }
 
 .servicesContainer_left {
@@ -695,10 +701,6 @@ button.btn-default {
 
 .eSCart_header svg {
     cursor: pointer;
-}
-
-.leinaDocar_main {
-    margin-top: 108px;
 }
 
 .homepageSectionOne {
@@ -1277,7 +1279,7 @@ span.company, span.modalname {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: absolute;
+    position: sticky;
     top: 0;
     z-index: 99;
     width: 100%;
@@ -1335,4 +1337,12 @@ a {
 
 .docNav_login a:hover {
     color: #000;
+}
+
+.services_container {
+    background-color: #ECE4E3;
+}
+
+.services_header {
+    padding: 0 41px;
 }
