--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,8 @@ input:focus, textarea:focus {
 }
 
 .checkout {
-    margin-top: 20px;
+    /* margin-top: 20px; */
+    background-color: #ECE4E3;
 }
 
 .checkout__statusBar {
@@ -173,7 +174,7 @@ input:focus, textarea:focus {
 }
 
 .checkout_main {
-    padding-top: 68px;
+    padding: 112px 90px 30px;
     display: flex;
     justify-content: space-between;
 }
@@ -736,7 +737,7 @@ button.btn-default {
     margin-top: 42px;
     border: 1px solid #000;
     padding: 7px 16px;
-    border-radius: 12px;
+    border-radius: 8px;
     cursor: pointer;
     font-size: 16px;
 }
@@ -752,6 +753,7 @@ button.btn-default {
 
 .carAndModal_phone input {
     border-color: #000;
+    border-radius: 8px;
 }
 
 .doc_button.easy_book_btn_c {
@@ -1274,7 +1276,7 @@ span.company, span.modalname {
 }
 
 .doc_nav {
-    padding: 30px 90px;
+    padding: 20px 90px;
     background-color: #ECE4E3;
     display: flex;
     align-items: center;
