--- a/src/App.css
+++ b/src/App.css
@@ -298,6 +298,8 @@ input:focus, textarea:focus {
 
 .checkoutMain__right {
     width: calc(50% - 24px);
+    display: flex;
+    flex-direction: column;
 }
 
 .checkoutAddress-text input {
@@ -337,7 +339,7 @@ button.btn-default {
 
 .checkoutLocation-address.inside svg.inside {
     position: absolute;
-    left: 6px;
+    left: 16px;
 }
 
 .checkoutLocation-address.inside .checkoutAddress-text {
@@ -345,7 +347,7 @@ button.btn-default {
 }
 
 .checkoutLocation-address.inside .checkoutAddress-text input {
-    padding-left: 24px;
+    padding-left: 36px;
 }
 
 .checkout_cart {
@@ -1402,7 +1404,7 @@ a {
     color: #BBBBBB;
 }
 
-.sSCCar_right {
+.sSCCar_right, .changeIcon {
     height: 32px;
     width: 32px;
     border-radius: 100%;
@@ -1411,4 +1413,18 @@ a {
     justify-content: center;
     background-color: #8173C9;
     color: #fff;
+}
+
+.doc_button.placeOrderbtn {
+    margin-top: 54px;
+    justify-content: center;
+    width: 100%;
+    display: flex;
+}
+
+.doc_button.placeOrderbtn button {
+    /* width: 80%; */
+    padding: 22px 170px;
+    font-size: 16px;
+    font-weight: 700;
 }
